frontend/src/components/organisms/TopNavigation.scss
nav .sidenav-trigger {
  float: right;
}

#mobile-top-menu {
  padding-top: 15px;
}

.margin-fix {
  margin-left: 20px;
}

.nav-wrapper li:nth-child(2) {
  max-width: 240px;
}

.account-name {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 15px !important;
}

.mini-controls .timer-countdown {
  padding: 9px 10px 10px 10px;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 6px;
  margin-left: 25px;
  margin-right: 10px;
  margin-top: 5px;
  font-size: larger;
}

.mini-controls a {
  margin-right: 5px !important;
  margin-left: 0 !important;
}

@media only screen and (min-device-width: 300px) and (max-device-width: 1024px) {
  .logo-icon {
    margin: 0px 10px 0 0;
  }
  .margin-fix {
    margin-left: 20px;
  }
}

@media only screen and (min-width: 995px) {
  .logo-icon {
    margin: 0px 10px 0 20px;
  }
}

